--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
-* Last name:
-* First name:
-* Github username:
+* Last name: Xue
+* First name: Hongyi
+* Github username: xeshxzh
 
 * Instructions:
 
